# Ngine-Standalone

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md
include/: Exception.h  Macro.h  NGINE.hxx  Timer.h  Window.h
libNgine-Unix/: Exception.cxx  Exception.hxx  Graphics.cxx  Graphics.hxx  NGINE.hxx  Window.cxx  Window.hxx
libNgine-Win32/: Exception.hxx  Graphics.cxx  Graphics.hxx  Macro.hxx  Window.cxx  Window.hxx
src/: Exception.cxx  Timer.cxx  Window.cxx
testApp-Unix/: main.cpp
testApp-Win32/: main.cpp
